k8s/service.yml
apiVersion: v1
kind: Service
metadata:
  name: ingress-ui-service
spec:
  selector:
    app: ingress-ui
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  type: ClusterIP
